Trying to fix overlapping problem with the navigation area

--- a/app/assets/stylesheets/point_app.css
+++ b/app/assets/stylesheets/point_app.css
@@ -64,6 +64,7 @@ nav ul {
 
 nav li {
 	display: inline;
+	padding-left: 25px;
 }
 
 /* .footer handles the foot of the page */
